WIP fixing bubble alignment

--- a/less/talk.less
+++ b/less/talk.less
@@ -22,8 +22,13 @@
   overflow: hidden;
 }
 
-.component-left, .component-right {
+.component-left,
+.component-right {
   .talk__chat-container {
+    width: 100%;
+  }
+
+  .talk__chat__wrapper {
     width: 100%;
   }
 }
@@ -39,17 +44,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    padding: 0.5rem 0;
+    padding: 0 0 .5rem 0;
     margin-bottom: 0.5rem;
     opacity: 0;
     transform: translateY(100px);
     transition: all 2000ms cubic-bezier(0.23, 1, 0.32, 1),
       visibility 0s linear 0s;
 
-    &.is-visited {
-      opacity: 1;
-      transform: translateY(0);
-    }
+
 
     &__narrator {
       justify-content: center !important;
@@ -57,19 +59,22 @@
   }
 
   &__chat__character {
-    padding: 0.5rem 1rem;
+    padding: 0 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-width: 18%;
+    max-width: 18%;
 
     &__right {
       justify-content: flex-end;
-      
+
+
       .talk__chat-container {
         flex-direction: row-reverse;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: flex-start;
       }
 
       .talk__chat__message {
@@ -103,28 +108,25 @@
         border-radius: 50%;
         border: 4px solid @esdc-dark-blue;
         background-color: @white;
-        margin-bottom: 0.5rem;
-        height: 80px;
-        min-width: 80px;
-        max-width: 80px;
         display: flex;
         justify-content: center;
         align-items: center;
       }
 
       @media (max-width: 47.5rem) {
-        .talk__character__image-container {
-          height: 50px;
-          min-width: 50px;
-          max-width: 50px;
-        }
+
         .talk__chat-container {
           width: 100%;
         }
+
+        .talk__chat__wrapper {
+          width: 100%;
+        }
       }
-    } 
+    }
 
     &__left {
+
       .talk__chat__message__text__audio__container {
         position: relative;
         background-color: @default-message-background;
@@ -132,6 +134,7 @@
         border-radius: 1rem;
         border: 2px solid @default-message-background;
         padding: 1rem;
+
         &::after {
           content: '';
           position: absolute;
@@ -146,6 +149,23 @@
           transform: translateY(-50%);
         }
       }
+
+    }
+  }
+
+  &__chat__wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+
+    &.right {
+      float: right;
+    }
+
+    &.left {
+      .talk__chat__character-title {
+        margin-left: calc(18% + 2rem);
+      }
     }
   }
 
@@ -154,7 +174,6 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    width: 70%;
   }
 
   &__chat__character-title {
@@ -166,7 +185,6 @@
     border-radius: 50%;
     border: 4px solid @default-message-background;
     background-color: @white;
-    margin-bottom: 0.5rem;
     height: 80px;
     min-width: 80px;
     max-width: 80px;
@@ -205,8 +223,48 @@
       max-width: 50px;
     }
 
+    &__chat__character {
+      min-width: 12%;
+    }
+
     &__chat-container {
       width: 100%;
+    }
+
+    &__chat__wrapper {
+      width: 100%;
+
+      &.left {
+        .talk__chat__character-title {
+          margin-left: calc(12% + 2rem);
+        }
+      }
+    }
+  }
+
+  @media (max-width: 25.75rem) {
+
+    &__chat__character {
+      display: none;
+    }
+
+    &__chat-container {
+      width: 100%;
+    }
+
+    &__chat__character__left .talk__chat__message__text__audio__container::after,
+    &__chat__character__right .talk__chat__message__text__audio__container::after {
+      display: none;
+    }
+
+    &__chat__wrapper {
+      width: 100%;
+
+      &.left {
+        .talk__chat__character-title {
+          margin-left: 0;
+        }
+      }
     }
   }
 }
